# RH-Trader

./: .env  .env.example  README.md  bot.py  pyproject.toml  requirements.txt
src/rh_trader/: __init__.py  blueprint_cache.py  bot.py  catalog.py  config.py  database.py  embeds.py  metaforge.py  raider_market.py
tests/: test_blueprint_cache.py  test_bot_rep_parsing.py  test_bot_store_tiers.py  test_database.py  test_embeds.py  test_listing_limits.py  test_metaforge.py  test_raider_market.py  test_scam_database.py  test_summary_helper.py
